--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,9 +14,9 @@ workflows:
           BUNDLE_ID: "io.codemagic.mars.CM-NATIVE-IOS" # <-- Put your Bundle Id here.
           XCODE_SCHEME: "CM-NATIVE-IOS" # <-- Put the name of your scheme here.
         xcode: 15.0
-#         ios_signing:
-#             distribution_type: app_store # or: ad_hoc | development | enterprise
-#             bundle_identifier: com.mars.native-ios-app
+        ios_signing:
+            distribution_type: app_store # or: ad_hoc | development | enterprise
+            bundle_identifier: io.codemagic.mars.CM-NATIVE-IOS
       
       scripts:
 
@@ -24,17 +24,17 @@ workflows:
           script: |
               echo $NPM_RC
               pod install
-        - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
-          script: |
-            keychain initialize
-#      until docker system info > /dev/null 2>&1; do sleep 1; done
-        - name: Fetch signing files
-          script: |
-            app-store-connect fetch-signing-files $BUNDLE_ID --type IOS_APP_STORE --create
-            app-store-connect fetch-signing-files com.mars.native-ios-appUITests.xctrunner --type IOS_APP_STORE --create
-        - name: Use system default keychain
-          script: |
-            keychain add-certificates
+#         - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
+#           script: |
+#             keychain initialize
+# #      until docker system info > /dev/null 2>&1; do sleep 1; done
+#         - name: Fetch signing files
+#           script: |
+#             app-store-connect fetch-signing-files $BUNDLE_ID --type IOS_APP_STORE --create
+#             app-store-connect fetch-signing-files com.mars.native-ios-appUITests.xctrunner --type IOS_APP_STORE --create
+        # - name: Use system default keychain
+        #   script: |
+        #     keychain add-certificates
         - name: Set up code signing settings on Xcode project
           script: |
              xcode-project use-profiles
