--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -6,11 +6,11 @@ workflows:
         app_store_connect: CM_NEVERCODE
       environment:
         vars:
-          XCODE_WORKSPACE: "CM-NATIVE-IOS.xcworkspace" # <-- Put the name of your workspace here.
+          XCODE_WORKSPACE: "CM_NATIVE_IOS.xcworkspace" # <-- Put the name of your workspace here.
           # XCODE_PROJECT: "native_ios_app.xcodeproj"
 #           XCODE_SCHEME: "native_ios_app" # <-- Put the name of your scheme here.
           BUNDLE_ID: "io.codemagic.mars.CM-NATIVE-IOS" # <-- Put your Bundle Id here.
-          XCODE_SCHEME: "CM-NATIVE-IOS" # <-- Put the name of your scheme here.
+          XCODE_SCHEME: "CM_NATIVE_IOS" # <-- Put the name of your scheme here.
         xcode: 15.0
         ios_signing:
             distribution_type: app_store # or: ad_hoc | development | enterprise
