--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -27,7 +27,7 @@ workflows:
           script: |
             #!/bin/sh
             cd $CM_BUILD_DIR
-            LATEST_BUILD_NUMBER=$(app-store-connect get-latest-testflight-build-number "$APP_ID" --pre-release-version 1.0)
+            LATEST_BUILD_NUMBER=$(app-store-connect get-latest-testflight-build-number "$APP_ID")
             agvtool new-version -all $(($LATEST_BUILD_NUMBER + 1))  
         - name: Build ipa for distribution
           script: |
