--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,12 +23,12 @@ workflows:
         - name: Set up code signing settings on Xcode project
           script: |
              xcode-project use-profiles      
-        - name: Increment build number
-          script: |
-            #!/bin/sh
-            cd $CM_BUILD_DIR
-            LATEST_BUILD_NUMBER=$(app-store-connect get-latest-testflight-build-number "$APP_ID")
-            agvtool new-version -all $(($LATEST_BUILD_NUMBER + 3))  
+        # - name: Increment build number
+        #   script: |
+        #     #!/bin/sh
+        #     cd $CM_BUILD_DIR
+        #     LATEST_BUILD_NUMBER=$(app-store-connect get-latest-testflight-build-number "$APP_ID")
+        #     agvtool new-version -all $(($LATEST_BUILD_NUMBER + 3))  
         - name: Build ipa for distribution
           script: |
             xcode-project build-ipa --workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
