--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -12,6 +12,7 @@ workflows:
           BUNDLE_ID: "io.codemagic.mars.CM-NATIVE-IOS" # <-- Put your Bundle Id here.
           XCODE_SCHEME: "CM_NATIVE_IOS" # <-- Put the name of your scheme here.
           APP_ID: "6473636517"
+          xcode: 14.2
         xcode: 15.0
         ios_signing:
             distribution_type: app_store # or: ad_hoc | development | enterprise
