--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,24 +14,33 @@ workflows:
           APP_ID: "6473636517"
           xcode: 14.2
         xcode: 15.1
-        ios_signing:
-            distribution_type: app_store # or: ad_hoc | development | enterprise
-            bundle_identifier: io.codemagic.mars.CM-NATIVE-IOS   
+        # ios_signing:
+        #     distribution_type: app_store # or: ad_hoc | development | enterprise
+        #     bundle_identifier: io.codemagic.mars.CM-NATIVE-IOS   
       scripts:
         - name: Pod inst
           script: |
               pod install
+        - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
+          script: |
+            keychain initialize
+        - name: Fetch signing files
+          script: |
+            app-store-connect fetch-signing-files $BUNDLE_ID --type IOS_APP_STORE --create
+        - name: Use system default keychain
+          script: |
+            keychain add-certificates
         - name: Set up code signing settings on Xcode project
           script: |
              xcode-project use-profiles      
-        - name: iOS test
-          script: | 
-            xcode-project run-tests \
-              --workspace CM_NATIVE_IOS.xcworkspace \
-              --scheme CM_NATIVE_IOS \
-              --device "iPhone 13" \
-              --output-dir build/ios/test
-          test_report: build/ios/test/*.xml
+        # - name: iOS test
+        #   script: | 
+        #     xcode-project run-tests \
+        #       --workspace CM_NATIVE_IOS.xcworkspace \
+        #       --scheme CM_NATIVE_IOS \
+        #       --device "iPhone 13" \
+        #       --output-dir build/ios/test
+        #   test_report: build/ios/test/*.xml
         - name: Increment build number
           script: |
             #!/bin/sh
