--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -64,7 +64,8 @@ workflows:
         # app_store_connect:
         #   auth: integration
         firebase:
-            firebase_service_account: $FIREBASE_SERVICE_ACCOUNT        
+            firebase_token: $FIREBASE_TOKEN
+            # firebase_service_account: $FIREBASE_SERVICE_ACCOUNT        
             ios:
               app_id: 1:608315409963:ios:7d468bb148397aa50f8c6e 
                 - mars
