--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -53,6 +53,9 @@ workflows:
         - name: Build ipa for distribution
           script: |
             xcode-project build-ipa --workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
+        - name: Export artifact az zip
+          script: |
+            cp -r $CM_BUILD_DIR/build/ios/ipa/*.ipa $CM_EXPORT_DIR/build/ios/ipa/*.ipa
       artifacts:
         - build/ios/ipa/*.ipa
 #         - build/ios/ipa/bullet.ipa
