--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -2,8 +2,8 @@ workflows:
     ios-workflow:
       name: ios_workflow
       instance_type: mac_mini_m1
-      # integrations:
-      #   app_store_connect: Codemagic
+      integrations:
+        app_store_connect: Codemagic
       environment:
         groups: 
          - ios
@@ -65,14 +65,14 @@ workflows:
 #         - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
 #         - /Users/builder/clone/build/ios_integ/Build/Products/ios_tests.zip
       publishing:
-       email:
-        recipients:
-          - nihal@nevercode.io
-        notify:
-          success: true
-          failure: false
-      #   # app_store_connect:
-      #   #   auth: integration
+       # email:
+       #  recipients:
+       #    - nihal@nevercode.io
+       #  notify:
+       #    success: true
+       #    failure: false
+        app_store_connect:
+          auth: integration
       #   firebase:
       #       firebase_token: $FIREBASE_TOKEN
       #       # firebase_service_account: $FIREBASE_SERVICE_ACCOUNT        
