--- a/release_notes.json
+++ b/release_notes.json
@@ -1,7 +1,6 @@
 [
     {
         "language": "en-GB",
-        "text": "British English release notes text",
-        "description": "Updated app description"
+        "text": "British English release notes text"
     }
 ]
