--- a/release_notes.json
+++ b/release_notes.json
@@ -1,6 +1,7 @@
 
     {
         "language": "en-GB",
-        "text": "testing..."
+        "text": "testing...",
+        "whatsNew": "testing"
     }
 
