--- a/release_notes.json
+++ b/release_notes.json
@@ -1,7 +1,7 @@
-
+[
     {
         "language": "en-GB",
-        "text": "testing...",
-        "whatsNew": "testing"
+        "text": "testing..."
     }
 
+]
