--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -73,6 +73,8 @@ workflows:
        #    failure: false
         app_store_connect:
           auth: integration
+          beta_groups: 
+              - mars
       #   firebase:
       #       firebase_token: $FIREBASE_TOKEN
       #       # firebase_service_account: $FIREBASE_SERVICE_ACCOUNT        
