--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -73,6 +73,7 @@ workflows:
        #    failure: false
         app_store_connect:
           auth: integration
+          submit_to_testflight: true
           beta_groups: 
               - mars
       #   firebase:
