--- a/release_notes.json
+++ b/release_notes.json
@@ -1,5 +1,5 @@
-
+[
     {
-        "language": "en-GB",
-        "text": "British English release notes text"
+        "language": "en-US"
     }
+]
