--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,6 +15,7 @@ workflows:
           BUNDLE_ID: "io.codemagic.mars.CM-NATIVE-IOS" # <-- Put your Bundle Id here.
           XCODE_SCHEME: "CM_NATIVE_IOS" # <-- Put the name of your scheme here.
           APP_ID: "6473636517"
+          APP_DESCRIPTION: "_"
           xcode: 14.2
         xcode: 15.1
         # ios_signing:
@@ -23,7 +24,7 @@ workflows:
       scripts:
         - name: Change description value
           script: |
-            sed -i.bak -e 's/sdsd/$APP_DESCRIPTION/g' release_notes.json
+            sed -i.bak -e 's/description=.*/description=\"$APP_DESCRIPTION\"/g' release_notes.json
         - name: Pod inst
           script: |
               pod install
