--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,9 +23,7 @@ workflows:
       scripts:
         - name: Change description value
           script: |
-            text="hit there"
-            sed -i '' -e "s|\("text" : "1$text|" release_notes.json
-     # sed -i.bak -e 's/"text":.*/"text":"$APP_DESCRIPTION\"/g' release_notes.json
+             sed -i.bak -e "s/"text"=.*/"text"=\"$APP_DESCRIPTION\"/g" release_notes.json
         - name: Pod inst
           script: |
               echo $APP_DESCRIPTION
