--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,8 +23,14 @@ workflows:
       scripts:
         - name: Change description value
           script: |
-             APP_DESCRIPTION="hi there"
-             sed -i.bak -e 's/"text":.*/"text":\"$APP_DESCRIPTION\"/g' release_notes.json
+            release_notes=$(cat release_notes.json)
+            text=$(echo $release_notes | jq '.[]'.text)
+            updated_text=$(echo $text | sed 's/"$text"/"$APP_DESCRIPTION"/g')
+            modified_notes=$(echo $release_notes | sed "s/"$text"/"$updated_title"/g")
+            echo $modified_notes > release_notes.json 
+
+     # APP_DESCRIPTION="hi there"
+     # sed -i.bak -e 's/"text":.*/"text":\"$APP_DESCRIPTION\"/g' release_notes.json
         - name: Pod inst
           script: |
               echo $APP_DESCRIPTION
