--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -23,7 +23,7 @@ workflows:
       scripts:
         - name: Change description value
           script: |
-           sed -i.bak 's/"text":.*/"text":'"$APP_DESCRIPTION"'/g' release_notes.json
+           sed -i.bak 's/"text":.*/"text":"'$APP_DESCRIPTION'"/g' release_notes.json
         # echo $APP_DESCRIPTION
         # release_notes=$(cat release_notes.json)
         # echo $release_notes
