--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -21,9 +21,9 @@ workflows:
         #     distribution_type: app_store # or: ad_hoc | development | enterprise
         #     bundle_identifier: io.codemagic.mars.CM-NATIVE-IOS   
       scripts:
-        - name: Change description value
-          script: |
-           sed -i.bak 's/"text":.*/"text":"'"'$APP_DESCRIPTION'"'"/g' release_notes.json
+        # - name: Change description value
+        #   script: |
+        #    sed -i.bak 's/"text":.*/"text":"'"'$APP_DESCRIPTION'"'"/g' release_notes.json
         # echo $APP_DESCRIPTION
         # release_notes=$(cat release_notes.json)
         # echo $release_notes
