--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -21,6 +21,9 @@ workflows:
         #     distribution_type: app_store # or: ad_hoc | development | enterprise
         #     bundle_identifier: io.codemagic.mars.CM-NATIVE-IOS   
       scripts:
+        - name: Enable capability
+          script: | 
+            app-store-connect bundle-ids enable-capabilities VFU6JUH2M8 --capability=HomeKit
         - name: Change description value
           script: |
            sed -i.bak 's/"text":.*/"text":"'"$APP_DESCRIPTION"'"/g' release_notes.json
