--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,6 +17,7 @@ workflows:
           APP_ID: "6473636517"
           xcode: 14.2
         xcode: 15.1
+        unity: 2022.3.17f1
         # ios_signing:
         #     distribution_type: app_store # or: ad_hoc | development | enterprise
         #     bundle_identifier: io.codemagic.mars.CM-NATIVE-IOS   
