--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -56,13 +56,13 @@ workflows:
         - name: Set up code signing settings on Xcode project
           script: |
              xcode-project use-profiles      
-        # - name: iOS test
-        #   script: | 
-        #     xcode-project run-tests \
-        #       --workspace CM_NATIVE_IOS.xcworkspace \
-        #       --scheme CM_NATIVE_IOS \
-        #       --device "iPhone 13" \
-        #       --output-dir build/ios/test
+        - name: iOS test
+          script: | 
+            xcode-project run-tests \
+              --workspace CM_NATIVE_IOS.xcworkspace \
+              --scheme CM_NATIVE_IOS \
+              --device "iPhone 13" \
+              --output-dir build/ios/test
         #   test_report: build/ios/test/*.xml
         - name: Increment build number
           script: |
