--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -61,8 +61,7 @@ workflows:
             xcode-project run-tests \
               --workspace CM_NATIVE_IOS.xcworkspace \
               --scheme CM_NATIVE_IOS \
-              --device "iPhone 13" \
-              --output-dir build/ios/test
+              --device "iPhone 13" 
         #   test_report: build/ios/test/*.xml
         - name: Increment build number
           script: |
