--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -56,12 +56,20 @@ workflows:
         - name: Set up code signing settings on Xcode project
           script: |
              xcode-project use-profiles      
-        - name: iOS test
-          script: | 
-            xcode-project run-tests \
-              --workspace CM_NATIVE_IOS.xcworkspace \
-              --scheme CM_NATIVE_IOS \
-              --device "iPhone 13" 
+        - name: Xcodebuild testing
+          script: |
+            xcodebuild \
+              -workspace CM_NATIVE_IOS.xcworkspace \
+              -scheme CM_NATIVE_IOS \
+              -derivedDataPath "../build/ios_integ" \
+              -sdk iphoneos17.2 \
+              build-for-testing
+        # - name: iOS test
+        #   script: | 
+        #     xcode-project run-tests \
+        #       --workspace CM_NATIVE_IOS.xcworkspace \
+        #       --scheme CM_NATIVE_IOS \
+        #       --device "iPhone 13" 
         #   test_report: build/ios/test/*.xml
         - name: Increment build number
           script: |
