--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -45,10 +45,10 @@ workflows:
         #     appium -v
         #     npm install appium
         #     appium -v
+        
         - name: Pod inst
           script: |
-              echo $APP_DESCRIPTION
-              pod install
+              rm -rf ~/Library/Caches/CocoaPods Pods ~/Library/Developer/Xcode/DerivedData && pod deintegrate && pod install
         - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
           script: |
             keychain initialize
