--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -97,9 +97,9 @@ workflows:
 #         - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
 #         - /Users/builder/clone/build/ios_integ/Build/Products/ios_tests.zip
       publishing:
-       # email:
-       #  recipients:
-       #    - nihal@nevercode.io
+       email:
+        recipients:
+          - nihal@nevercode.io
        #  notify:
        #    success: true
        #    failure: false
