--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -102,9 +102,10 @@ workflows:
            - nihal@nevercode.io
         app_store_connect:
           auth: integration
-          submit_to_testflight: true
-          beta_groups: 
-              - mars
+          submit_to_app_store: true
+          # submit_to_testflight: true
+          # beta_groups: 
+          #     - mars
         # scripts:
         #   - name: Status check
         #     script: |        
