--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -102,8 +102,8 @@ workflows:
            - nihal@nevercode.io
         app_store_connect:
           auth: integration
-          submit_to_app_store: true
-          # submit_to_testflight: true
+        
+          submit_to_testflight: true
           # beta_groups: 
           #     - mars
         # scripts:
