--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,7 +16,7 @@ workflows:
           XCODE_SCHEME: "CM_NATIVE_IOS" # <-- Put the name of your scheme here.
           APP_ID: "6473636517"
           xcode: 14.2
-          CLIENT_ID: $CLIENT_ID
+          CUSTOMER_ID: $CLIENT_ID
         xcode: 15.2
         # unity: 2022.3.17f1
         # ios_signing:
@@ -49,7 +49,7 @@ workflows:
         
         - name: Pod inst
           script: |
-              echo $CLIENT_ID
+              echo $CUSTOMER_ID
               rm -rf ~/Library/Caches/CocoaPods Pods ~/Library/Developer/Xcode/DerivedData && pod deintegrate && pod install
         - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
           script: |
