--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -55,6 +55,7 @@ workflows:
               rm -rf ~/Library/Caches/CocoaPods Pods ~/Library/Developer/Xcode/DerivedData && pod deintegrate && pod install
         - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
           script: |
+            echo $TOKEN
             keychain initialize
         - name: Fetch signing files
           script: |
