--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,10 +17,9 @@ workflows:
         xcode: latest
       triggering:
         events:
-          - push
           - pull_request
         branch_patterns:
-          - pattern: 'main'
+          - pattern: 'dev'
             include: true
             source: true
       scripts:
