--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,7 +17,7 @@ workflows:
         xcode: latest
       triggering:
         events:
-          - pull_request
+          - push
         branch_patterns:
           - pattern: 'main'
             include: true
