--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,9 +17,9 @@ workflows:
         xcode: latest
       triggering:
         events:
-          - pull_request
+          - push
         branch_patterns:
-          - pattern: 'feature'
+          - pattern: 'main'
             include: true
             source: true
       scripts:
