--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,9 +17,9 @@ workflows:
         xcode: latest
       triggering:
         events:
-          - push
+          - pull_request
         branch_patterns:
-          - pattern: 'main'
+          - pattern: 'feature2'
             include: true
             source: true
       scripts:
