--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -18,8 +18,9 @@ workflows:
       triggering:
         events:
           - push
+          - pull_request
         branch_patterns:
-          - pattern: 'main'
+          - pattern: 'feature2'
             include: true
             source: true
       scripts:
