--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -18,11 +18,10 @@ workflows:
       triggering:
         events:
           - push
-          - pull_request
         branch_patterns:
           - pattern: 'main'
             include: true
-            source: true
+            source: false
       scripts:
         - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
           script: |
