--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -14,15 +14,15 @@ workflows:
           BUNDLE_ID: "io.codemagic.mars.CM-NATIVE-IOS" # <-- Put your Bundle Id here.
           XCODE_SCHEME: "CM_NATIVE_IOS" # <-- Put the name of your scheme here.
           APP_ID: "6473636517"
-        xcode: 14.2
-      triggering:
-        events:
-          - push
-          - pull_request
-        branch_patterns:
-          - pattern: 'dev'
-            include: true
-            source: true
+        xcode: edge
+      # triggering:
+      #   events:
+      #     - push
+      #     - pull_request
+      #   branch_patterns:
+      #     - pattern: 'dev'
+      #       include: true
+      #       source: true
       scripts:
         - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
           script: |
