--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,14 +15,12 @@ workflows:
           XCODE_SCHEME: "CM_NATIVE_IOS" # <-- Put the name of your scheme here.
           APP_ID: "6473636517"
         xcode: 15.2
-      # triggering:
-      #   events:
-      #     - push
-      #     - pull_request
-      #   branch_patterns:
-      #     - pattern: 'dev'
-      #       include: true
-      #       source: true
+      triggering:
+        events:
+          - tag
+        tag_patterns:
+          - pattern: 'dev12'
+            include: true
       scripts:
         - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
           script: |
