--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -18,8 +18,12 @@ workflows:
       triggering:
         events:
           - tag
+        branch_patterns:
+          - pattern: 'plugin-prod'
+            include: true
+            source: false
         tag_patterns:
-          - pattern: 'dev14'
+          - pattern: '*'
             include: true
       scripts:
         - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
