--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,7 +1,7 @@
 workflows:
     ios-workflow:
       name: ios_workflow
-      instance_type: mac_mini_m1
+      instance_type: mac_mini_m2
       integrations:
         app_store_connect: Codemagic
       environment:
@@ -58,14 +58,14 @@ workflows:
         - /tmp/xcodebuild_logs/*.log
 #         - $HOME/Library/Developer/Xcode/DerivedData/**/Build/**/*.dSYM
 #         - /Users/builder/clone/build/ios_integ/Build/Products/ios_tests.zip
-      # publishing:
-      #   email:
-      #    recipients:
-      #      - nihal@nevercode.io
-      #   app_store_connect:
-      #     auth: integration
+      publishing:
+        email:
+         recipients:
+           - nihal@nevercode.io
+        app_store_connect:
+          auth: integration
         
-      #     submit_to_testflight: true
+          submit_to_testflight: true
       #     beta_groups: 
       #         - mars
     
