--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,4 +9,4 @@ jobs:
         with:
           app-id: 656a0292cc50c7a8cd27a1f2
           workflow-id: ios-workflow
-          token: UjW3noRBwGnyBlOOfHhc8suwuNZmhT4XP7SaeXV-Z7c
+          token:
