--- a/.github/main.yml
+++ b/.github/main.yml
@@ -30,5 +30,5 @@ jobs:
         with:
           app-id: 656a0292cc50c7a8cd27a1f2
           workflow-id: ios-workflow
-          branch: 'develop'
+          branch: 'main'
           token: UjW3noRBwGnyBlOOfHhc8suwuNZmhT4XP7SaeXV-Z7c
