--- a/.github/main.yml
+++ b/.github/main.yml
@@ -1,9 +1,7 @@
-# This workflow is triggered on pushes to the repository.
 on: push
-    
+
 jobs:
-  services_job:
-    name: integration-test
+  trigger-codemagic-build:
     runs-on: ubuntu-latest
     steps:
       - name: Trigger Codemagic build
