--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,27 @@
-on: push
-
+on:
+  repository_dispatch:
+    types: [go-integration-test, java-integration-test]
+    
 jobs:
-  trigger-codemagic-build:
+  services_job:
+    name: integration-test
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
+
+      - name: check out to repository
+        uses: actions/checkout@v3
+        with:
+          repository: roava/app
+          token: ${{ secrets.PAT }}
+
+      - uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.16.9'
+          channel: 'stable'
+
       - name: Trigger Codemagic build
         uses: codemagic-ci-cd/trigger-codemagic-workflow-action@v2.0.0
         with:
