--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,5 @@ jobs:
         uses: codemagic-ci-cd/trigger-codemagic-workflow-action@v2.0.0
         with:
           app-id: 656a0292cc50c7a8cd27a1f2
-          workflow-id: ${{ github.event.client_payload.name }}
+          workflow-id: ios.workflow
           token: UjW3noRBwGnyBlOOfHhc8suwuNZmhT4XP7SaeXV-Z7c
