--- a/.github/workflows/cm.yml
+++ b/.github/workflows/cm.yml
@@ -13,4 +13,5 @@ jobs:
         with:
           app-id: 656a0292cc50c7a8cd27a1f2
           workflow-id: ios.workflow
+          branch: "main"
           token: UjW3noRBwGnyBlOOfHhc8suwuNZmhT4XP7SaeXV-Z7c
