--- a/.github/workflows/cm.yml
+++ b/.github/workflows/cm.yml
@@ -12,6 +12,6 @@ jobs:
         uses: codemagic-ci-cd/trigger-codemagic-workflow-action@v2.0.0
         with:
           app-id: 656a0292cc50c7a8cd27a1f2
-          workflow-id: ${{CODEMAGIC_WORKFLOW_ID}}
+          workflow-id: ${CODEMAGIC_WORKFLOW_ID}
           branch: "main"
           token: UjW3noRBwGnyBlOOfHhc8suwuNZmhT4XP7SaeXV-Z7c
