--- a/.github/workflows/cm.yml
+++ b/.github/workflows/cm.yml
@@ -9,6 +9,7 @@ jobs:
       packages: write
     steps:
       - name: Trigger Codemagic build
+        run: echo $CODEMAGIC_TOKEN
         uses: codemagic-ci-cd/trigger-codemagic-workflow-action@v2.0.0
         with:
           app-id: 656a0292cc50c7a8cd27a1f2
