--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -15,9 +15,9 @@ workflows:
           XCODE_SCHEME: "CM_NATIVE_IOS" # <-- Put the name of your scheme here.
           APP_ID: "6473636517"
         xcode: 15.2
-      triggering:
-        events:
-          - push
+      # triggering:
+      #   events:
+      #     - push
       scripts:
         - name: Set up keychain to be used for codesigning using Codemagic CLI 'keychain' command
           script: |
