--- a/.github/workflows/cm.yml
+++ b/.github/workflows/cm.yml
@@ -12,6 +12,6 @@ jobs:
         uses: codemagic-ci-cd/trigger-codemagic-workflow-action@v2.0.0
         with:
           app-id: 656a0292cc50c7a8cd27a1f2
-          workflow-id: ios.workflow
+          workflow-id: ${{ github.event.client_payload.name }}
           branch: "main"
           token: ${{ secrets.CODEMAGIC_TOKEN }}
