--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -40,6 +40,8 @@ workflows:
         - name: Build ipa for distribution
           script: |
             xcode-project build-ipa --workspace "$CM_BUILD_DIR/$XCODE_WORKSPACE" --scheme "$XCODE_SCHEME"
+          when:
+            condition: $CM_BRANCH == "main"
         - name: Export artifact az zip
           script: |
             cp -r $CM_BUILD_DIR/build/ios/ipa/*.ipa $CM_EXPORT_DIR/artefact
